# My-Little-Projects

./: README.md
Color_Qt_App/: CMakeLists.txt  color_structs.cpp  color_structs.h  mainwindow.cpp  mainwindow.ui
Cube/: CMakeLists.txt  main.cpp
Killer/: CMakeLists.txt  main.cpp
Killer/Monitor/: Monitor.cpp  Monitor.h
Killer/Process/: Process.cpp  Process.h
SFML_Tanks/: CMakeLists.txt  main.cpp
SFML_Tanks/game/: Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h  Entity.cpp  Entity.h  EntityData.cpp  EntityData.h  Game.cpp  Game.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  ResourceHolder.h  ResourceIdentifiers.h  SceneNode.cpp  SceneNode.h  SpriteNode.cpp  SpriteNode.h  TankEntity.cpp  TankEntity.h  TankHullEntity.cpp  TankHullEntity.h  TankTurretEntity.cpp  TankTurretEntity.h  TextNode.cpp  TextNode.h  Utility.cpp  Utility.h  World.cpp  World.h
SFML_Tanks/lib/SFML-2.5.1/include/SFML/Graphics/: RenderTarget.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Transform.hpp  Transformable.hpp
